Añadido mecanismo de roles.

--- a/AulaVirtual/app/src/main/res/values/strings.xml
+++ b/AulaVirtual/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
         <item>ESTUDIANTE</item>
         <item>PROFESOR</item>
     </array>
+    <string name="title_activity_preuba">preuba</string>
 </resources>
