Modificado el diseño de la aplicacion, haciendola menos compleja. Falta implementar rol alumno

--- a/AulaVirtual/app/src/main/res/values/strings.xml
+++ b/AulaVirtual/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
         <item>PROFESOR</item>
     </array>
     <string name="title_activity_preuba">preuba</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
